# ansible

./: .ansible-lint  .gitattributes  .gitignore  .gitmodules  .prettierrc  .pyre_configuration  .travis.yml  .yamllint  Pipfile  README.md  alarm.yaml  ansible.cfg  collectd.yaml  devvm.yaml  ec2.yaml  example-secrets.yaml  fail2ban.yaml  grissom.yaml  hosts  husky.yaml  iot-mariner.yaml  labmate.yaml  macbook.yaml  monit.yaml  mosquitto.yaml  nuc.yaml  openwrt.yaml  pistem.yaml  pyproject.toml  requirements.yml  site.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  package-vms.yml  test.yml
boxes/alpine-base/: README.md  Vagrantfile  provision.yml
boxes/arch-base/: README.md  provision.yml
boxes/debian10-base/: README.md  Vagrantfile  provision.yml
etc/dnsmasq.d/: 00-lan.conf
etc/goaccess/: goaccess.conf
etc/monitrc.d/: filesystem.conf  network.conf  processes.conf  programs.conf  system.conf
etc/pihole/: adlists.list
etc/samba/: smb.conf
files/: check-vitals.sh  dhcp  dropbear  elegoo-mars-pro.gcode  firewall  iot-mariner-rc.local  luci  luci_statistics  network  nuc-hosts  nuc-lsyncd.conf.lua  system
firewall/: home.yaml  nuc.yaml  server.yaml
group_vars/: all.yaml  secrets.yaml.example
openwrt/: .gitmodules  .travis.yml  example-secrets.yaml  hosts  openwrt.yaml
playbooks/: collectd.yaml  common.yaml  ec2.yaml  fail2ban.yaml  goaccess.yaml  grissom.yaml  home-assistant.yaml  macbook.yaml  monit.yaml  mosquitto.yaml  nginx.yaml  nuc.yaml  openwrt.yaml  pihole.yaml  samba.yaml  sshd.yaml  sshguard.yaml
scripts/: bootstrap-pi  ec2-fetch-host-key  ec2-new-instance  ec2-stop-instance  fetch-ec2-host-key  hsh  initssh  kill-ec2-instance  new-ec2-instance  new-ec2-instance.sh  new-ec2-instance.yaml  new-vm  restic  restic.sh  stop-ec2-instance  upgrade-osx  upgrade-remote  upgrade-remote.yaml  vault_pass.sh  vm-destroy  vm-new
templates/: ddns  wireless
vm/: Makefile  build.sh
(+243 files in other folders)
