[tool.poetry]
name = "ansible-boxes"
version = "0.0.1"
description = "My computer provisioning setup with ansible"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "3.0.0"
passlib = "1.7.4"

[tool.poetry.dev-dependencies]
ansible-lint = "5.0.2"
molecule = "3.2.3"
molecule-vagrant = "0.6.1"
python-vagrant = "0.5.15"
pyexpect = "1.0.21"
pyre-check = "0.0.60"
pytest = "6.2.2"
python-language-server = "0.36.2"
pytest-testinfra = "6.1.0"
yamllint = "1.26.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
